--- a/www/css/style.css
+++ b/www/css/style.css
@@ -20,3 +20,20 @@ body {
     border-radius: 5px;
     text-align: center;
 }
+
+#panel {
+    position: absolute;
+    top: 5px;
+    left: 50%;
+    margin-left: -180px;
+    z-index: 5;
+    background-color: #fff;
+    padding: 5px;
+    border: 1px solid #999;
+}
+
+#map-canvas {
+    height: 95%;
+    margin: 0px;
+    padding: 0px;
+}
