--- a/www/templates/home/menu.html
+++ b/www/templates/home/menu.html
@@ -15,17 +15,8 @@
         </ion-header-bar>
         <ion-content>
             <ion-list>
-                <ion-item menu-close ng-click="login()">
+                <ion-item menu-close ng-click="doLogin()">
                     Login
-                </ion-item>
-                <ion-item menu-close href="#/app/search">
-                    Search
-                </ion-item>
-                <ion-item menu-close href="#/app/browse">
-                    Browse
-                </ion-item>
-                <ion-item menu-close href="#/app/playlists">
-                    Playlists
                 </ion-item>
                 <ion-item menu-close href="#/app/tab">
                     Tabs
