--- a/www/templates/friends/tab-chats.html
+++ b/www/templates/friends/tab-chats.html
@@ -1,13 +1,13 @@
-<ion-view view-title="Chats">
+<ion-view view-title="Chats" ng-init="getListFriends()">
   <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/app/tab/chats/{{chat.id}}">
-        <img ng-src="{{chat.face}}">
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.lastText}}</p>
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="item in model.listUser" type="item-text-wrap" href="#/app/tab/chats/{{item.personId}}">
+        <!--<img ng-src="{{chat.face}}">-->
+        <h2>{{item.firstName}} {{item.lastName}}</h2>
+        <p>{{item.address}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
 
-        <ion-option-button class="button-assertive" ng-click="remove(chat)">
+        <ion-option-button class="button-assertive" ng-click="remove(item)">
           Delete
         </ion-option-button>
       </ion-item> 
