--- a/www/templates/login/register.html
+++ b/www/templates/login/register.html
@@ -1,6 +1,6 @@
 ﻿<ion-modal-view>
   <ion-header-bar>
-    <h1 class="title">{{'login.title' | translate}}</h1>
+    <h1 class="title">{{'regist.title' | translate}}</h1>
     <div class="buttons">
       <button class="button button-clear" ng-click="closeLogin()">Close</button>
     </div>
