--- a/www/templates/login/starter.html
+++ b/www/templates/login/starter.html
@@ -1,7 +1,7 @@
 ﻿<ion-modal-view>
-  <ion-content>
-    <form>
-
-    </form>
+  <ion-content class="start-screen" ng-init="checkAccountExist()">
+      <div>
+          <ion-spinner icon="ripple"></ion-spinner>
+      </div>
   </ion-content>
 </ion-modal-view>
