--- a/www/templates/login/login.html
+++ b/www/templates/login/login.html
@@ -19,6 +19,10 @@
         <label class="item">
           <button class="button button-block button-positive" type="submit">Log in</button>
         </label>
+
+          <label class="item">
+              <span class="input-label">{{uuid}}</span>
+          </label>
       </div>
     </form>
   </ion-content>
