--- a/www/templates/login/register.html
+++ b/www/templates/login/register.html
@@ -3,21 +3,24 @@
     <h1 class="title">{{'regist.title' | translate}}</h1>
   </ion-header-bar>
   <ion-content>
-    <form ng-submit="regist()">
+    <form ng-submit="regist(registData)">
       <div class="list">
         <label class="item item-input">
           <span class="input-label">{{'regist.phone_no' | translate}}</span>
-          <input type="text" ng-model="condition.phoneNo" maxlength="15">
+          <input type="text" ng-model="registData.phoneNumber" maxlength="15">
         </label>
         <label class="item item-input">
             <span class="input-label">{{'regist.full_name' | translate}}</span>
-            <input type="text" ng-model="condition.fullName" maxlength="50">
+            <input type="text" ng-model="registData.fullName" maxlength="50">
         </label>
         <label class="item item-input">
             <span class="input-label">{{'regist.account_name' | translate}}</span>
-            <input type="text" ng-model="condition.accountName" maxlength="50">
+            <input type="text" ng-model="registData.accountName" maxlength="50">
         </label>
-        <label class="item">
+          <label class="item item-input">
+              <span class="input-label">{{'regist.password' | translate}}</span>
+              <input type="password" ng-model="registData.password" maxlength="50">
+          </label><label class="item">
           <button class="button button-block button-positive" type="submit">{{'btn.regist' | translate}}</button>
         </label>
       </div>
