--- a/www/templates/friends/tab-friends.html
+++ b/www/templates/friends/tab-friends.html
@@ -1,10 +1,10 @@
-<ion-view view-title="Chats" ng-init="getListFriends()">
+<ion-view view-title="{{'home.friends.title' | translate}}" ng-init="getListFriends()">
   <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="item in model.listUser" type="item-text-wrap" href="#/app/tab/chats/{{item.personId}}">
-        <!--<img ng-src="{{chat.face}}">-->
-        <h2>{{item.firstName}} {{item.lastName}}</h2>
-        <p>{{item.address}}</p>
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="item in model.listFriends" type="item-text-wrap" href="#/app/tab/chats/{{item.personId}}">
+        <img ng-src="img/ionic.png">
+        <h2>{{item.fullName}}</h2>
+        <p>{{item.phoneNumber}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
 
         <ion-option-button class="button-assertive" ng-click="remove(item)">
