--- a/www/css/style.css
+++ b/www/css/style.css
@@ -62,3 +62,11 @@ body {
     background-color: deepskyblue;
 }
 
+.error-messages.ng-active {
+  background: #f90000;
+  color: white;
+  padding: 5px;
+/*   border-radius: 5px; */
+  margin-top: 15px;
+  position: relative;
+}
