--- a/www/templates/friends/tab-friends.html
+++ b/www/templates/friends/tab-friends.html
@@ -1,16 +1,19 @@
-<ion-view view-title="{{'home.friends.title' | translate}}" ng-init="getListFriends()">
-  <ion-content>
-    <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="item in model.listFriends" type="item-text-wrap" href="#/app/tab/chats/{{item.personId}}">
-        <img ng-src="img/ionic.png">
-        <h2>{{item.fullName}}</h2>
-        <p>{{item.phoneNumber}}</p>
-        <i class="icon ion-chevron-right icon-accessory"></i>
-
-        <ion-option-button class="button-assertive" ng-click="remove(item)">
-          Delete
-        </ion-option-button>
-      </ion-item> 
-    </ion-list> 
-  </ion-content>
+<ion-view view-title="{{'home.friends.title' | translate}}"> 
+	<ion-nav-buttons side="right">
+		<button class="button button-icon button-clear ion-ios-plus-empty" menu-toggle="left"></button>
+	</ion-nav-buttons>
+	<ion-content>
+	  <ion-list>
+	    <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="item in model.listFriends" type="item-text-wrap" href="#/app/tab/chats/{{item.accountId}}">
+	      <img ng-src="img/ionic.png">
+	      <h2>{{item.fullName}}</h2>
+	      <p>{{item.phoneNumber}}</p>
+	      <i class="icon ion-chevron-right icon-accessory"></i>
+	
+	      <ion-option-button class="button-assertive" ng-click="remove(item.accountId)">
+	      	{{'btn.delete' | translate}}
+	      </ion-option-button>
+	    </ion-item> 
+	  </ion-list> 
+	</ion-content>
 </ion-view>
