--- a/www/templates/friends/tab-friends.html
+++ b/www/templates/friends/tab-friends.html
@@ -1,6 +1,6 @@
 <ion-view view-title="{{'home.friends.title' | translate}}"> 
 	<ion-nav-buttons side="right">
-		<button class="button button-icon button-clear ion-ios-plus-empty" menu-toggle="left"></button>
+		<button class="button button-icon button-clear ion-ios-plus-empty" ng-click="findFriends()"></button>
 	</ion-nav-buttons>
 	<ion-content>
 	  <ion-list>
