--- a/www/templates/friends/friend-detail.html
+++ b/www/templates/friends/friend-detail.html
@@ -1,8 +1,19 @@
 <ion-view view-title="" ng-init="initDetail()">
   <ion-content class="padding">
-    <img ng-src="img/ionic.png" style="width: 64px; height: 64px">
-    <p>
-      {{friendSelect.accountId}}
-    </p>
+  	<div class="list card">
+		<div class="item item-avatar">
+		  <img ng-src="img/ionic.png">
+		  <h2>{{accountIdSelected}}</h2>
+		  <p>Nine Inch Nails</p>
+		</div>
+		
+		<div class="item item-image">
+		  <img src="img/ionic.png">
+		</div>
+		<a class="item item-icon-left assertive" href="#/app/map">
+		  <i class="icon ion-music-note"></i>
+		  Start listening
+		</a>
+	</div>
   </ion-content>>
 </ion-view>
