--- a/www/templates/friends/friend-detail.html
+++ b/www/templates/friends/friend-detail.html
@@ -10,7 +10,7 @@
 		<div class="item item-image">
 		  <img src="img/ionic.png">
 		</div>
-		<a class="item item-icon-left assertive" href="#/app/map">
+		<a class="item item-icon-left assertive" data-ng-click="startDirection(accountIdSelected)">
 		  <i class="icon ion-music-note"></i>
 		  Start listening
 		</a>
