--- a/www/templates/home/menu.html
+++ b/www/templates/home/menu.html
@@ -18,7 +18,7 @@
                 <ion-item menu-close ng-click="doLogin()">
                     Login
                 </ion-item>
-                <ion-item menu-close href="#/app/tab">
+                <ion-item menu-close ng-click="goToDash()">
                     Tabs
                 </ion-item>
                 <ion-item menu-close href="#/app/map">
