--- a/www/templates/friends/tabs.html
+++ b/www/templates/friends/tabs.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Tabs" ng-init="initDash()">
+<ion-view view-title="Tabs">
     <ion-tabs class="tabs-icon-top tabs-color-active-positive">
         <!-- Diary Tab -->
         <ion-tab title="{{'home.diary' | translate}}" icon-off="ion-ios-bookmarks-outline" icon-on="ion-ios-bookmarks" href="#/app/tab/dash">
