--- a/www/templates/map/map.html
+++ b/www/templates/map/map.html
@@ -5,7 +5,7 @@
     <ion-content scroll="false">
         <map on-create="mapCreated(map)" id="map-canvas"></map>
         <ion-footer-bar class="bar-stable">
-            <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate"></a>
+            <a ng-click="getLocation()" class="button button-icon icon ion-navigate"></a>
         </ion-footer-bar>
     </ion-content>
 </ion-view>
