--- a/www/css/style.css
+++ b/www/css/style.css
@@ -14,8 +14,8 @@ body {
 }
 
 .marker-labels {
-/*     width: 160px; */
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     background: #fff;
     text-align: center;
 }
