--- a/www/templates/home/menu.html
+++ b/www/templates/home/menu.html
@@ -1,5 +1,5 @@
 <ion-side-menus enable-menu-with-back-views="false">
-    <ion-side-menu-content>
+    <ion-side-menu-content drag-content="false" id="side-menu-content-id">
         <ion-nav-bar class="bar-stable bar-assertive">
             <ion-nav-back-button>
             </ion-nav-back-button>
@@ -15,14 +15,14 @@
         </ion-header-bar>
         <ion-content>
             <ion-list>
-                <ion-item menu-close ng-click="doLogin()">
-                    Login
-                </ion-item>
                 <ion-item menu-close ng-click="goToDash()">
-                    Tabs
+                    {{'menu.item.dashboard' | translate}}
                 </ion-item>
-                <ion-item menu-close href="#/app/map">
-                    Map
+                <ion-item menu-close href="#/app/setting">
+                    {{'menu.item.account_setting' | translate}}
+                </ion-item>
+                <ion-item menu-close href="#/app/setting">
+                    {{'menu.item.sys_setting' | translate}}
                 </ion-item>
             </ion-list>
         </ion-content>
