--- a/www/templates/map/map.html
+++ b/www/templates/map/map.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Google Map" ng-init="getLocation()">
+<ion-view view-title="Google Map" ng-init="getLocation(null)">
     <ion-header-bar class="bar-stable">
         <h1 class="title">Map</h1>
     </ion-header-bar>
